fix(astro feed): broken layout on mobile devices

--- a/astro_2.0/features/ViewProposal/components/CustomFunctionCallContent/CustomFunctionCallContent.module.scss
+++ b/astro_2.0/features/ViewProposal/components/CustomFunctionCallContent/CustomFunctionCallContent.module.scss
@@ -1,14 +1,23 @@
-@use 'styles/breakpoints';
 @import 'styles/mixins';
 
 .root {
   display: grid;
-  grid-gap: 24px;
+  grid-row-gap: 24px;
   grid-template-areas:
-    'address method'
-    'editor editor'
-    'deposit deposit';
-  grid-template-columns: 1fr 1fr;
+    'address'
+    'method'
+    'editor'
+    'deposit';
+  grid-template-columns: 1fr;
+
+  @include tablet-landscape {
+    grid-gap: 24px;
+    grid-template-areas:
+      'address method'
+      'editor editor'
+      'deposit deposit';
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .address {
@@ -21,6 +30,10 @@
 
 .editor {
   grid-area: editor;
+
+  pre {
+    white-space: pre-wrap;
+  }
 }
 
 .deposit {
@@ -33,7 +46,6 @@
   white-space: nowrap;
 
   .iconWrapper {
-    //background-color: var(--color-brand-black);
     border-radius: 50%;
     height: 24px;
     margin-right: 8px;
@@ -58,16 +70,12 @@
 
   input {
     font-weight: 700;
+
     @include placeholder {
       color: var(--color-neutral-40);
       transition: opacity 0.2s linear;
     }
   }
-}
-
-.wide {
-  flex: 1;
-  max-width: unset;
 }
 
 .select {
@@ -79,27 +87,13 @@
     overflow: hidden;
   }
 
-  .balance {
-    display: none;
-    margin-left: auto;
-  }
+  ul {
+    min-width: 200px;
 
-  .row {
-    font-family: Inter, 'sans-serif';
-    font-size: 14px;
-    width: 100%;
+    @include tablet-landscape {
+      min-width: 260px;
+    }
   }
-}
-
-.select ul {
-  min-width: 260px;
-  .balance {
-    display: flex;
-  }
-}
-
-.divider {
-  min-width: 80px;
 }
 
 .symbol {
@@ -111,28 +105,4 @@
   display: flex;
   padding: 12px;
   width: 100%;
-}
-
-@media screen and (max-width: #{breakpoints.$screen-sm}px) {
-  .root {
-    display: grid;
-    grid-template-areas:
-      'address'
-      'method'
-      'editor'
-      'deposit';
-    grid-template-columns: 1fr;
-
-    > div:last-of-type {
-      grid-column: 1 / 3;
-      margin-left: 0;
-    }
-  }
-
-  .select ul {
-    min-width: 200px;
-    .balance {
-      display: flex;
-    }
-  }
 }
